--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.datasource.hikari.maximum-pool-size=10
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui/index.html
 
 
