--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
